--- a/src/panelbarco/PanelBarcoFXML.fxml
+++ b/src/panelbarco/PanelBarcoFXML.fxml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="root" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
+<AnchorPane id="AnchorPane" fx:id="root" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
    <children>
       <TabPane layoutX="-1.0" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="50.0" tabMinWidth="175.0">
         <tabs>
@@ -31,39 +35,6 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                                 <children>
-                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="Latitud:" textAlignment="CENTER" VBox.vgrow="NEVER">
-                                       <font>
-                                          <Font name="System Bold" size="24.0" />
-                                       </font>
-                                       <VBox.margin>
-                                          <Insets top="30.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="LATº" textAlignment="CENTER" VBox.vgrow="NEVER">
-                                       <font>
-                                          <Font name="System Bold" size="12.0" />
-                                       </font>
-                                       <VBox.margin>
-                                          <Insets />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="408.0" text="Longitud:">
-                                       <font>
-                                          <Font name="System Bold" size="24.0" />
-                                       </font>
-                                    </Label>
-                                    <Label alignment="CENTER" prefHeight="37.0" prefWidth="405.0" text="LONº">
-                                       <font>
-                                          <Font size="12.0" />
-                                       </font>
-                                       <VBox.margin>
-                                          <Insets bottom="20.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                 </children>
-                              </VBox>
                               <VBox prefHeight="211.0" prefWidth="218.0" GridPane.columnIndex="1">
                                  <children>
                                     <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="HDG:" textAlignment="CENTER" VBox.vgrow="NEVER">
@@ -71,10 +42,10 @@
                                           <Font name="System Bold" size="48.0" />
                                        </font>
                                        <VBox.margin>
-                                          <Insets bottom="10.0" top="50.0" />
+                                          <Insets top="50.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Label alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="PITCH" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                    <Label fx:id="labelHDG" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="PITCH" textAlignment="CENTER" VBox.vgrow="NEVER">
                                        <font>
                                           <Font name="System Bold" size="36.0" />
                                        </font>
@@ -84,42 +55,22 @@
                                     </Label>
                                  </children>
                               </VBox>
-                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                              <VBox prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TWD:" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TEMP:" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="48.0" />
                                        </font>
                                        <VBox.margin>
-                                          <Insets bottom="10.0" top="50.0" />
+                                          <Insets top="50.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Label fx:id="labelTWD_" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                    <Label fx:id="labelTEMP" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="36.0" />
                                        </font>
                                        <VBox.margin>
-                                          <Insets bottom="50.0" top="10.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                 </children>
-                              </VBox>
-                              <VBox layoutX="232.0" layoutY="221.0" prefHeight="211.0" prefWidth="218.0" GridPane.rowIndex="1">
-                                 <children>
-                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TWS:" textAlignment="CENTER" VBox.vgrow="NEVER">
-                                       <font>
-                                          <Font name="System Bold" size="48.0" />
-                                       </font>
-                                       <VBox.margin>
-                                          <Insets bottom="10.0" top="50.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label fx:id="labelTWS_" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
-                                       <font>
-                                          <Font name="System Bold" size="36.0" />
-                                       </font>
-                                       <VBox.margin>
-                                          <Insets bottom="50.0" top="10.0" />
+                                          <Insets top="10.0" />
                                        </VBox.margin>
                                     </Label>
                                  </children>
@@ -132,7 +83,7 @@
                <graphic>
                   <Label styleClass="top" text="EMBARCACION">
                      <font>
-                        <Font name="System Bold" size="18.0" />
+                        <Font size="18.0" />
                      </font>
                   </Label>
                </graphic>
@@ -156,7 +107,7 @@
                                  <children>
                                     <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="Latitud:" textAlignment="CENTER" VBox.vgrow="NEVER">
                                        <font>
-                                          <Font name="System Bold" size="24.0" />
+                                          <Font name="System Bold" size="48.0" />
                                        </font>
                                        <VBox.margin>
                                           <Insets top="30.0" />
@@ -164,43 +115,10 @@
                                     </Label>
                                     <Label fx:id="textoLatitud" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="LATº" textAlignment="CENTER" VBox.vgrow="NEVER">
                                        <font>
-                                          <Font name="System Bold" size="12.0" />
-                                       </font>
-                                       <VBox.margin>
-                                          <Insets />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="408.0" text="Longitud:">
-                                       <font>
                                           <Font name="System Bold" size="24.0" />
                                        </font>
-                                    </Label>
-                                    <Label fx:id="textoLongitud" alignment="CENTER" prefHeight="37.0" prefWidth="405.0" text="LONº">
-                                       <font>
-                                          <Font size="12.0" />
-                                       </font>
                                        <VBox.margin>
-                                          <Insets bottom="20.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                 </children>
-                              </VBox>
-                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.columnIndex="1">
-                                 <children>
-                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="HDG:" textAlignment="CENTER" VBox.vgrow="NEVER">
-                                       <font>
-                                          <Font name="System Bold" size="48.0" />
-                                       </font>
-                                       <VBox.margin>
-                                          <Insets bottom="10.0" top="50.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label fx:id="labelHDG" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="PITCH" textAlignment="CENTER" VBox.vgrow="NEVER">
-                                       <font>
-                                          <Font name="System Bold" size="36.0" />
-                                       </font>
-                                       <VBox.margin>
-                                          <Insets bottom="50.0" top="10.0" />
+                                          <Insets top="10.0" />
                                        </VBox.margin>
                                     </Label>
                                  </children>
@@ -241,6 +159,26 @@
                                        </font>
                                        <VBox.margin>
                                           <Insets bottom="50.0" top="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.columnIndex="1">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="408.0" text="Longitud:" textAlignment="CENTER">
+                                       <font>
+                                          <Font name="System Bold" size="48.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets top="30.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label fx:id="textoLongitud" alignment="CENTER" prefHeight="37.0" prefWidth="405.0" text="LONº">
+                                       <font>
+                                          <Font name="System Bold" size="24.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="20.0" top="10.0" />
                                        </VBox.margin>
                                     </Label>
                                  </children>
@@ -323,6 +261,9 @@
                                        <font>
                                           <Font name="System Bold" size="36.0" />
                                        </font>
+                                       <VBox.margin>
+                                          <Insets top="10.0" />
+                                       </VBox.margin>
                                     </Label>
                                  </children>
                               </VBox>
@@ -337,21 +278,36 @@
                                        <font>
                                           <Font name="System Bold" size="36.0" />
                                        </font>
+                                       <VBox.margin>
+                                          <Insets top="10.0" />
+                                       </VBox.margin>
                                     </Label>
                                  </children>
                               </VBox>
                               <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2">
                                  <children>
-                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TEMP:" textAlignment="CENTER">
-                                       <font>
-                                          <Font name="System Bold" size="48.0" />
-                                       </font>
-                                    </Label>
-                                    <Label fx:id="labelTEMP" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER">
-                                       <font>
-                                          <Font name="System Bold" size="36.0" />
-                                       </font>
-                                    </Label>
+                                    <LineChart fx:id="lnTWS" title="TWS">
+                                      <xAxis>
+                                        <CategoryAxis side="BOTTOM" />
+                                      </xAxis>
+                                      <yAxis>
+                                        <NumberAxis side="LEFT" />
+                                      </yAxis>
+                                    </LineChart>
+                                    <Slider fx:id="slideTWS" blockIncrement="1.0" majorTickUnit="2.0" max="10.0" min="2.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" />
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                 <children>
+                                    <LineChart fx:id="lnTWD" title="TWD">
+                                      <xAxis>
+                                        <CategoryAxis side="BOTTOM" />
+                                      </xAxis>
+                                      <yAxis>
+                                        <NumberAxis side="LEFT" />
+                                      </yAxis>
+                                    </LineChart>
+                                    <Slider fx:id="slideTWD" blockIncrement="1.0" majorTickUnit="2.0" max="10.0" min="2.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" />
                                  </children>
                               </VBox>
                            </children>
@@ -368,10 +324,13 @@
             </Tab>
         </tabs>
       </TabPane>
-      <CheckBox id="check" fx:id="checkNocturno" alignment="CENTER" layoutX="574.0" layoutY="6.0" mnemonicParsing="false" onAction="#modoNocturno" prefHeight="49.0" prefWidth="222.0" text="MODO NOCTURNO">
+      <CheckBox id="check" fx:id="checkNocturno" alignment="CENTER" layoutX="595.0" layoutY="6.0" mnemonicParsing="false" onAction="#modoNocturno" prefHeight="27.0" prefWidth="201.0" text="MODO NOCTURNO" AnchorPane.leftAnchor="595.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="6.0">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="12.0" />
          </font>
+         <padding>
+            <Insets bottom="10.0" />
+         </padding>
       </CheckBox>
    </children>
 </AnchorPane>
